--- a/index.html
+++ b/index.html
@@ -8,13 +8,66 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <header></header>
+    <header>
+        <img src="./assets/img/logo.svg" alt="Logo">
+        <div class="header__title_container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a class="header__button" href="">Conoce nuestros planes <span></span> </a>
+        </div>
+    </header>
 
     <main>
-        <section></section>
+        <section class="main__exchange_container">
+
+            <div class="main__exchange_image">
+
+            </div>
+
+            <div class="main__exchange_title">
+                <h2>
+                    Visibilizamos todas las tasas de cambio.
+                </h2>
+                <p>Traemos información en tiempo real de las casa de cambio y las monedas más importantes del mundo.</p>
+            </div>
+
+            <section class="main__exchange_tables_container">
+                <div class="main__exchange_currency_table">
+                    <p class="currency_table_title">Monedas</p>
+                    <div class="currency_table_container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</td><td class="table__top-right table__right">$1.96 <span class="down"></span> </td>
+                            </tr>
+                            <tr>
+                                <td>Etherium</td><td class="table__right">$0.07 <span class="up"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td><td class="table__right">$2.17 <span class="down"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td><td class="table__bottom-right table__right">$4.96 <span class="down"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency_table_date">
+                        <p>
+                            <b> <strong>Actualizado:</strong> 19 Julio, 23:45 pm</b>
+                        </p>
+                    </div>
+                </div>
+
+                <div>
+
+                </div>
+            </section>
+
+        </section>
         <section></section>
         <section></section>
         <section></section>
