adding products sections

--- a/index.html
+++ b/index.html
@@ -68,7 +68,20 @@
             </section>
 
         </section>
-        <section></section>
+        <section class="main__product_details">
+            <span class="main__product_details_batatalogo"></span>
+            <div class="main__product_details_title">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="procuct_cards_container">
+                <article class="product_cards">
+                    <span class="clock"></span>
+                    <h3 class="product_card_title">Tiempo real</h3>
+                    <p class="product_card_body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento</p>
+                </article>
+            </section>
+        </section>
         <section></section>
         <section></section>
     </main>
