--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header__title_container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a class="header__button" href="">Conoce nuestros planes <span></span> </a>
+            <a class="header__button" href="#planes">Conoce nuestros planes <span></span> </a>
         </div>
     </header>
 
@@ -76,14 +76,73 @@
             </div>
             <section class="procuct_cards_container">
                 <article class="product_cards">
-                    <span class="clock"></span>
+                    <span class="clock icono"></span>
                     <h3 class="product_card_title">Tiempo real</h3>
+                    <p class="product_card_body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento</p>
+                </article>
+                <article class="product_cards">
+                    <span class="eyes icono"></span>
+                    <h3 class="product_card_title">No hay tasas escondidas</h3>
+                    <p class="product_card_body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento</p>
+                </article>
+                <article class="product_cards">
+                    <span class="money icono"></span>
+                    <h3 class="product_card_title">Compara monedas</h3>
+                    <p class="product_card_body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento</p>
+                </article>
+                <article class="product_cards">
+                    <span class="check icono"></span>
+                    <h3 class="product_card_title">Informacion confiable</h3>
                     <p class="product_card_body">Nuestra API toma información minuto a minuto sobre las tasas que más determinan el comportamiento</p>
                 </article>
             </section>
         </section>
-        <section></section>
-        <section></section>
+        <section class="bitcoin-img-container">
+            <h2>Conócelo hoy.</h2>
+        </section>
+
+
+        <section id="planes" class="main_plans_container">
+            <div class="plan_title">
+                <h2>
+                    Escoge el plan que mejor se ajuste a ti.
+                </h2>
+                <p>
+                    Cualquier plan te da acceso completo a nuestra plataforma.
+                </p>
+            </div>
+
+            <section class="plans_container_slider">
+
+                <article class="plans_container_card" >
+                    <div class="plan_info_container">
+                        <h3>Pago Anual</h3>
+                        <p class="plan_info_price"> <span>$</span> 99 </p>
+                        <p class="plan_info_saving">* Ahorra $129 comprando el plan mensual.</p>
+                        <button class="plan_info_button">Escoge este <span></span> </button>
+                    </div>
+                </article>
+
+                <article class="plans_container_card" >
+                    <p class="plans_recomended">Recomendado</p>
+                    <div class="plan_info_container">
+                        <h3>Pago Anual</h3>
+                        <p class="plan_info_price"> <span>$</span> 99 </p>
+                        <p class="plan_info_saving">* Ahorra $129 comprando el plan mensual.</p>
+                        <button class="plan_info_button">Escoge este <span></span> </button>
+                    </div>
+                </article>
+                
+                <article class="plans_container_card" >
+                    <div class="plan_info_container">
+                        <h3>Pago Anual</h3>
+                        <p class="plan_info_price"> <span>$</span> 99 </p>
+                        <p class="plan_info_saving">* Ahorra $129 comprando el plan mensual.</p>
+                        <button class="plan_info_button">Escoge este <span></span> </button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
 
     <footer></footer>
